add.컨텐츠 추가

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
   transition-property: background-color, color;
   transition-duration: 0.02s;
   transition-timing-function: ease-in-out;
-}
+} */
 
 html {
   background-color: white;
